--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
                 <button id="home-score-btn-3" onclick="increasehomescorethree()">+3</button>
             </div>
             <div>
-                <h3>GUEST</h3>
+                <h3>AWAY</h3>
                 <h2 class="score2" id="Guest-score">0</h2>
                 <button id="guest-score-btn-1" onclick="increaseguestscoreone()">+1</button>
                 <button id="guest-score-btn-2" onclick="increaseguestscoretwo()">+2</button>
