updated the names
changes the names to Amaan and Alisha

--- a/index.html
+++ b/index.html
@@ -5,14 +5,14 @@
     <body>
         <div class="container">
             <div>
-                <h3>HOME</h3>
+                <h3>Amaan</h3>
                 <h2 class="score1" id="home-score">0</h2>
                 <button id="home-score-btn-1" onclick="increasehomescoreone()">+1</button>
                 <button id="home-score-btn-2" onclick="increasehomescoretwo()">+2</button>
                 <button id="home-score-btn-3" onclick="increasehomescorethree()">+3</button>
             </div>
             <div>
-                <h3>AWAY</h3>
+                <h3>Alisha</h3>
                 <h2 class="score2" id="Guest-score">0</h2>
                 <button id="guest-score-btn-1" onclick="increaseguestscoreone()">+1</button>
                 <button id="guest-score-btn-2" onclick="increaseguestscoretwo()">+2</button>
